--- a/snap/gui/biblemate.desktop
+++ b/snap/gui/biblemate.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Version=0.1
+Version=0.1.4
 Name=BudgetMate
-Comment=Helping friend to read your Bible
+Comment=Friendly helper to read your Bible
 Exec=BibleMate
-Icon=snap-biblemate.png
+Icon=${SNAP}/meta/gui/biblemate.png
 Terminal=false
 Type=Application
 Categories=Education;
